Oh my god this is a huge change from initial. I made it so that the time-block element only gets appended up to a certain point. The code then stops at the current hour, then continues to implement new code at future. Furthremore, looking into the CSS reveals that textarea is needed to implement a text functionality for events. Right now I am looking at ways to overlap the text area

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -11,6 +11,7 @@ textarea {
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  
 }
 
 .jumbotron {
@@ -28,12 +29,18 @@ textarea {
 .time-block {
   text-align: center;
   border-radius: 15px;
+  
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+  
+}
+
+.row:hover {
+opacity: 85%;
 }
 
 .hour {
